Fix border radius and extra margin of dropdown items

--- a/front/src/Components/NavBar.css
+++ b/front/src/Components/NavBar.css
@@ -97,4 +97,9 @@
     .nav-dropdown-menu.show {
         max-height: 100%;
     }
+
+    .nav-dropdown-menu a {
+        border-radius: 0;
+        margin-right: 0;
+    }
 }
